--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -4,12 +4,14 @@
 }
 
 body {
-  color: #403C00;
+  color: #403c00;
   font-family: "SocialLight", -apple-system, BlinkMacSystemFont, Helvetica, Roboto, Arial, sans-serif;
   padding: 0;
-  margin: 30px 60px;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  margin: 0 40px;
   font-size: 22px;
-  line-height: 1.6em;
+  line-height: 1.4em;
   padding: 0;
   letter-spacing: 0.02em;
   max-width: 100%;
@@ -17,10 +19,11 @@ body {
 }
 
 p {
-  margin: 0 60px;
+  max-width: 30em;
+  margin: 20px 0;
 }
 
-h1, h2 {
+h1 {
   font-size: 22px;
   text-align: left;
   font-weight: normal;
@@ -32,27 +35,105 @@ a {
   color: #403c00;
 }
 
-a:hover {
-  color: #5CA7FF;
-}
-
-.links {
-  margin-top: 30px;
-}
-
-footer {
-  margin: 30px 60px;
-  position: absolute;
+.container {
+  padding: 30px 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  bottom: 0;
-  left: 0;
-  right: 0;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  height: calc(100vh - 60px);
 }
 
-footer h1 {
-  margin: 0 40px 0 0;
+.button-group {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 20px;
+  margin-top: 30px;
+}
+
+.button-group a {
+  margin-right: 20px;
+  font-size: 18px;
+  padding: 2px 8px 2px;
+  background: rgba(92, 167, 255, 0.2);
+  border: 1px solid rgba(64, 60, 0, 0.2);
+  text-decoration: none;
+  backdrop-filter: blur(3px);
+  -webkit-backdrop-filter: blur(3px);
+  border-radius: 9px;
+  -webkit-transition: ease-in-out all 200ms;
+  transition: ease-in-out all 200ms;
+}
+
+.button-group a:hover {
+  background: rgba(155, 155, 155, 0.2);
+}
+
+header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+header .menu a {
+  font-size: 18px;
+  padding: 19px 30px 18px;
+  background: rgba(92, 167, 255, 0.2);
+  -webkit-box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
+  -webkit-backdrop-filter: blur(30px);
+          backdrop-filter: blur(30px);
+  border-radius: 40px;
+  text-decoration: none;
+  line-height: 1;
+}
+
+footer {
+  margin: 90px 0 0;
+}
+
+footer .link-group {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 20px;
+}
+
+footer .link-group a {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  margin-right: 10px;
+  font-size: 18px;
+  padding: 2px 8px 2px;
+  border: 1px solid rgba(64, 60, 0, 0);
+  text-decoration: none;
+  border-radius: 9px;
+  -webkit-transition: ease-in-out all 200ms;
+  transition: ease-in-out all 200ms;
+}
+
+footer .link-group a:hover {
+  background: rgba(155, 155, 155, 0.2);
+  backdrop-filter: blur(3px);
+  -webkit-backdrop-filter: blur(3px);
+  border: 1px solid rgba(64, 60, 0, 0.2);
 }
 
 .bg {
