--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -8,17 +8,18 @@
 @import "webfonts";
 $font-body: 22px;
 $font-head: 22px;
-$font-subhead: 16px;
-
+$font-subhead: 18px;
 
 // General
 body {
-  color: #403C00;
+  color: #403c00;
   font-family: "SocialLight", -apple-system, BlinkMacSystemFont, Helvetica, Roboto, Arial, sans-serif;
   padding: 0;
-  margin: 30px 60px;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  margin: 0 40px;
   font-size: $font-body;
-  line-height: 1.6em;
+  line-height: 1.4em;
   padding: 0;
   letter-spacing: 0.02em;
   max-width: 100%;
@@ -26,10 +27,11 @@ body {
 }
 
 p {
-  margin: 0 60px;
+  max-width: 30em;
+  margin: 20px 0;
 }
 
-h1, h2 {
+h1 {
   font-size: $font-head;
   text-align: left;
   font-weight: normal;
@@ -39,25 +41,77 @@ h1, h2 {
 
 a {
   color: rgb(64, 60, 0);
-  &:hover {
-    color: #5CA7FF;
+}
+
+.container {
+  padding: 30px 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: calc(100vh - 60px);
+}
+
+.button-group {
+  display: flex;
+  gap: 20px;
+  margin-top: 30px;
+  a {
+    margin-right: 20px;
+    font-size: $font-subhead;
+    padding: 2px 8px 2px;
+    background: rgba(92, 167, 255, 0.2);
+    border: 1px solid rgba(64, 60, 0, 0.2);
+    text-decoration: none;
+    backdrop-filter: blur(3px);
+    -webkit-backdrop-filter: blur(3px);
+    border-radius: 9px;
+    transition: ease-in-out all 200ms;
+    &:hover {
+      background: rgba(155, 155, 155, 0.2);
+    }
   }
 }
 
-.links {
-  margin-top: 30px;
+header {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  .menu {
+    a {
+      font-size: $font-subhead;
+      padding: 19px 30px 18px;
+      background: rgba(92, 167, 255, 0.2);
+      box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
+      backdrop-filter: blur(30px);
+      border-radius: 40px;
+      text-decoration: none;
+      line-height: 1;
+    }
+  }
 }
 
-
 footer {
-  margin: 30px 60px;
-  position: absolute;
-  display: flex;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  h1 {
-    margin: 0 40px 0 0;
+  margin: 90px 0 0;
+  .link-group {
+    display: flex;
+    gap: 20px;
+    a {
+      box-sizing: border-box;
+      margin-right: 10px;
+      font-size: $font-subhead;
+      padding: 2px 8px 2px;
+      border: 1px solid rgba(64, 60, 0, 0);
+      text-decoration: none;
+      border-radius: 9px;
+      transition: ease-in-out all 200ms;
+      &:hover {
+        background: rgba(155, 155, 155, 0.2);
+        backdrop-filter: blur(3px);
+        -webkit-backdrop-filter: blur(3px);
+        border: 1px solid rgba(64, 60, 0, 0.2);
+      }
+    }
   }
 }
 
